# cps-growth-copilot

./: .gitignore  CHANGES.md  QUICKSTART.md  README.md  build_funnel_features.py  requirements.txt
app/api/: main.py  merchant.py
app/api/routers/: funnel.py  recommend.py
app/api/scripts/: build_item_funnel_features.py  check_item_funnel_features.py  rebuild_user_behavior_duckdb.py
app/backend/: README.md  pyproject.toml  setup.py
app/backend/src/: analytics.py  db.py  main.py  models.py  schemas.py  utils.py
app/backend/src/llm/: __init__.py  adapter.py  fake_llm.py  openai_llm.py  prompts.py
app/backend/src/routes/: alerts.py  diagnosis.py  health.py  metrics.py  opportunities.py
app/core/: guardrails.py  settings.py
app/frontend/: merchant.html  package.json
app/frontend/app/: globals.css  layout.tsx  page.tsx
app/frontend/app/copilot/: page.tsx
app/frontend/app/export/: page.tsx
app/frontend/app/merchant/: page.tsx
app/frontend/app/taoke/: page.tsx
app/frontend/scripts/: rebuild_user_behavior_duckdb.py
app/infra/: docker-compose.yml
app/infra/postgres/: init.sql
app/services/: commission.py  funnel.py  reasons.py  recommender.py
app/storage/: db.py
scripts/: bootstrap_data.py  import_tianchi_userbehavior.py  init_db.sh  inspect_db.py  load_sample_data.py  make_userbehavior_csv.py  run_demo.bat  run_demo.sh
